<resources>
    <string name="app_name">BodyFit</string>
    <string name="title_home">Home</string>
    <string name="title_scan">Scan</string>
    <string name="title_profile">Profile</string>
    <string name="scan_here">Generate your training now:</string>
    <string name="btn_generate_text">Generate Training</string>
    <string name="btn_cancel_text">Cancel</string>
    <string name="photo_result">photo result</string>
    <string name="welcome_text">Reshape your Body. Always live a healthy Life Style.</string>
    <string name="welcome_text2">Get Started</string>
    <string name="welcome_text3">Already have an account? </string>
    <string name="login_head">Hi, Welcome Back!</string>
    <string name="login_second">Hello again, ready to workout today?</string>
    <string name="invalid_email">Invalid email</string>
    <string name="email_add">Email Address</string>
    <string name="password">Password</string>
    <string name="email">Enter your email</string>
    <string name="login">Login</string>
    <string name="password_hint">Enter your password</string>
    <string name="minimum_char">Minimum 8 characters</string>
    <string name="invalid_password">Password must not be less than 8 characters</string>
    <string name="login_text1">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="succes_massage">You\'re succes to login</string>
    <string name="next">Countinue</string>
    <string name="reg_head">Create Account</string>
    <string name="hello">Let\'s make a change in yourself!"</string>
    <string name="username">Username</string>
    <string name="username_add">Enter your username</string>
    <string name="user_created">User created</string>


    <string name="practice_title">Practice Title</string>
    <string name="settings">Settings</string>
    <string name="finish">Finish</string>
    <string name="unfinish">Unfinish</string>
    <string name="my_training">My Training</string>
    <string name="detail_image">Detail Image</string>
    <string name="training_title">Training title</string>
    <string name="status">Status:</string>

    <string name="sets">Sets</string>
    <string name="repetition">Repetition</string>
    <string name="rest">Rest</string>

    <string name="sets_num">8</string>
    <string name="repetition_num">3</string>
    <string name="rest_num">1 min</string>

    <string name="step">Steps:</string>
    <string name="desc_step">1. Start in a prone position with your body straight.
2. Place your palms on the floor parallel to your shoulders.
3. Make sure your back remains straight and your weight is evenly distributed.
4. Position your legs straight with your fingertips touching the floor.
5. Start lifting your body until your arms are straight.
6. Do up and down movements by bending your elbows to 90 degrees.</string>
    <string name="done">Done</string>
    <string name="image_profile">Image Preview</string>
    <string name="hi_user">Hi, User</string>
    <string name="wellcome_txt">Good day for training.</string>
    <string name="search_hint">Search exercise</string>
    <string name="example_push_up">Example \'Push Up\'</string>
    <string name="training">Training</string>
    <string name="view_all">View All</string>
    <string name="articles">Articles</string>
    <string name="description_articles">Description Articles</string>
    <string name="article_title">Article Title</string>
    <string name="article_category">Article Category</string>

</resources>