<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Detail.DetailHomeTrainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_detail"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/detail_example"
            android:scaleType="centerCrop"
            android:contentDescription="@string/detail_image" />

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/arrow_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:text="@string/training_title"
            android:textStyle="bold"
            android:textSize="20sp"
            android:maxLines="2"
            android:ellipsize="end"
            android:singleLine="false"
            android:textColor="?attr/colorOnSecondary"
            android:layout_marginTop="8dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_detail"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_statuz"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:text="@string/status"
            android:layout_marginEnd="18dp"
            android:textStyle="normal"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="?attr/colorOnSecondary"
            android:layout_marginTop="8dp"
            android:layout_marginStart="18dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"/>

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/status_border_unfinish"
            android:paddingHorizontal="9dp"
            android:paddingVertical="3dp"
            android:text="@string/unfinish"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="?attr/colorPrimary"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@id/tv_statuz"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            />

        <TextView
            android:id="@+id/sets"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/sets"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_statuz" />

        <TextView
            android:id="@+id/repetition"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:text="@string/repetition"
            android:textStyle="normal"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="?attr/colorOnSecondary"
            android:layout_marginTop="14dp"
            android:layout_marginStart="105dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toEndOf="@+id/sets"
            app:layout_constraintTop_toBottomOf="@+id/tv_statuz"/>

        <TextView
            android:id="@+id/rest"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/rest"
            android:textStyle="normal"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="?attr/colorOnSecondary"
            android:layout_marginTop="14dp"
            android:layout_marginStart="100dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/repetition"
            app:layout_constraintTop_toBottomOf="@+id/tv_statuz"/>

        <TextView
            android:id="@+id/sets_number"
            android:layout_width="0dp"
            android:layout_height="27dp"
            android:text="@string/sets_num"
            android:textStyle="bold"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="?attr/colorPrimary"
            android:layout_marginTop="8dp"
            android:layout_marginStart="28dp"
            android:layout_marginBottom="8dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="3dp"
            android:textAlignment="center"
            android:background="@drawable/border_detail_reps_rest_sets"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sets"/>

        <TextView
            android:id="@+id/repetition_number"
            android:layout_width="0dp"
            android:layout_height="27dp"
            android:text="@string/repetition_num"
            android:textStyle="bold"
            android:textSize="16sp"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:paddingVertical="3dp"
            android:textAlignment="center"
            android:background="@drawable/border_detail_reps_rest_sets"
            android:textColor="?attr/colorPrimary"
            android:layout_marginTop="8dp"
            android:layout_marginStart="105dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toEndOf="@+id/sets_number"
            app:layout_constraintTop_toBottomOf="@+id/sets"/>

        <TextView
            android:id="@+id/rest_number"
            android:layout_width="0dp"
            android:layout_height="27dp"
            android:layout_marginStart="96dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="18dp"
            android:background="@drawable/border_detail_reps_rest_sets"
            android:gravity="center"
            android:paddingHorizontal="6dp"
            android:paddingVertical="3dp"
            android:text="@string/rest_num"
            android:textAlignment="center"
            android:textColor="?attr/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/repetition_number"
            app:layout_constraintTop_toBottomOf="@+id/sets" />

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:text="@string/step"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="?attr/colorOnSecondary"
            android:layout_marginTop="14dp"
            android:layout_marginStart="18dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sets_number"/>

        <TextView
            android:id="@+id/desc_step"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc_step"
            android:textStyle="normal"
            android:maxHeight="2000dp"
            android:ellipsize="end"
            android:singleLine="false"
            android:textSize="16sp"
            android:textColor="?attr/colorOnSecondary"
            android:layout_marginTop="8dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>