<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ResultPhoto.ResultPhotoActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/previewImageView"
            android:layout_width="match_parent"
            android:layout_height="480dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_scanHere"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/example_body"
            android:contentDescription="@string/photo_result" />

        <TextView
            android:id="@+id/tv_scanHere"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:text="@string/scan_here"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@id/scan_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/previewImageView"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </ProgressBar>



        <Button
            android:id="@+id/scan_btn"
            android:text="@string/btn_generate_text"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_scanHere"
            android:background="@drawable/button_background"/>

        <Button
            android:id="@+id/cancel_button"
            android:text="@string/btn_cancel_text"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/scan_btn"
            android:background="@drawable/button_background"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>