<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="16dp"
    tools:context=".ui.Detail.DetailArticleActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp">

        <ImageView
            android:id="@+id/image_detail"
            android:layout_width="match_parent"
            android:layout_height="275dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/example_article"
            android:scaleType="centerCrop"
            android:contentDescription="@string/detail_image" />

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/arrow_back" />

        <TextView
            android:id="@+id/tvArticleCategory"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:text="@string/article_category"
            android:textStyle="normal"
            android:textSize="16sp"
            android:maxLines="2"
            android:ellipsize="end"
            android:singleLine="false"
            android:textColor="?attr/colorPrimary"
            android:layout_marginTop="8dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_detail"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/article_title"
            android:textStyle="bold"
            android:textSize="20sp"
            android:maxLines="2"
            android:ellipsize="end"
            android:singleLine="false"
            android:textColor="?attr/colorOnSecondary"
            android:layout_marginTop="4dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvArticleCategory"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/descArticle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="18dp"
            android:ellipsize="end"
            android:maxHeight="2000dp"
            android:singleLine="false"
            android:text="@string/description_articles"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>